--- a/cv.html
+++ b/cv.html
@@ -84,22 +84,47 @@
       <h2>Curriculum Vitae</h2>
       <h3>Education</h3>
       <ul class="tight">
-        <li>M.A. in [Field], [University], [Year]</li>
-        <li>B.Sc. in [Field], [University], [Year]</li>
+        <li>M.Sc. </li>
+        <li>PG Dip.Tchg.</li>
       </ul>
       <h3>Professional Experience</h3>
       <ul class="tight">
-        <li><strong>[Role]</strong>, [Org], [Years]. Key contributions:
+        <li><strong>Research / Consultant</strong>, 2014 - pressent:
           <ul>
-            <li>Designed …</li>
-            <li>Led …</li>
+	    <li>Competence to undertake independent research practice.</li>
+            <li>Director - Focus Consultancy.</li>
+            <li>Industrial microbiology and chemistry - Tegel Foods.</li>
+            <li>Qualification development - including Secondary school alternatives to NCEA.</li>
+            <li>Workshop facilitator - expertise in assessment, moderation, curriculum design (NZQA  & graduate degree level).</li>
           </ul>
         </li>
       </ul>
-      <h3>Publications (Selected)</h3>
-      <ol class="pub-list apa" aria-label="Selected publications in APA format">
-        <li>Author, A. A., &amp; Fenton, M. (Year). Title. <em>Journal</em>, Vol(Issue), pages. DOI</li>
+      <h3>Teaching</h3>
+      <ul class="tight">
+        <li><strong>Academic & vocational</strong>:
+          <ul>
+            <li>Resource writing, instructional design, assessment writing, programme design and delivery.</li>
+            <li>Developed original hardware and software for STEAM teaching (Primary through to Secondary level)</li>
+            <li>Qualification development - including Secondary school alternatives to NCEA</li>
+            <li>Mentored and supervised in-service classroom teachers and principals to design, carry out and evaluate practice-led action research projects that have improved children’s’ learning outcomes in science and mathematics.</li>
+	   <li>Research active - long list of education conference publications/presentations.</li>
+          </ul>
+        </li>
+      </ul>
+      <h3>Instructional design</h3>
+      <ul class="tight">
+        <li><strong>Academic & vocational</strong>:
+          <ul>
+            <li>Familiar with various instructional design models such as ADDIE, Bloom, Gagne, and Merrill.</li>
+            <li>Online course design and content creation in both Moodle and iQualify platforms.</li>
+            <li>Working with stake holders and subject matter experts to design NZQA Foundation level, sub-degree and degree level programmes and courses.</li>
+            <li>Use of generative AI and AI Assessment Scale.</li>
+          </ul>
+        </li>
+      </ul>
+      <h3>Publications - selected</h3>
       </ol>
+     <p>More to follow soon...</p>
     </main>
   </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
