--- a/projects.html
+++ b/projects.html
@@ -80,13 +80,14 @@
       </div>
     </aside>
     <main id="content" class="content" role="main" tabindex="-1" aria-label="Research">
-      <h2>Research</h2>
+      <h2>Projects and Education Research</h2>
       <p>Current lines of inquiry and active studies.</p>
       <ul>
         <li>Voice-first interactions in embedded learning environments</li>
         <li>Interruptible media and attention-aware interfaces</li>
         <li>Low-cost data logging for inquiry-based STEM</li>
       </ul>
+      <p> More to be added soon...</p>
     </main>
   </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
