--- a/publications.html
+++ b/publications.html
@@ -83,10 +83,12 @@
     </aside>
     <main id="content" class="content" role="main" tabindex="-1" aria-label="Publications">
       <h2>Publications</h2>
-      <ol class="pub-list apa" aria-label="Full publications list in APA format">
-        <li id="pub-voice-first-2025">Fenton, M., &amp; Doe, A. (2025). Voice-first interactions for embedded learning environments. <em>Journal of Learning Tech</em>, 42(1), 15–29. <a href="https://doi.org/10.1234/jlt.2025.001" aria-label="Read publication DOI">https://doi.org/10.1234/jlt.2025.001</a></li>
-        <li id="pub-interruptible-2024">Doe, A., Smith, B., &amp; Fenton, M. (2024). Designing interruptible media for classroom devices. <em>Computers &amp; Education</em>, 210, 104859. <a href="https://doi.org/10.5678/cae.210.104859" aria-label="Read publication DOI">https://doi.org/10.5678/cae.210.104859</a></li>
+      <ol class="pub-list apa" aria-label="Sample publications list">
+        <li id="pub-prof-develop-2015">Fenton, M., &amp; Fenton, C. (2015). Primary teachers' experiences of professional development in Science by
+distance learning. <em>Proceedings of the New Zealand Association for Cooperative Education international conference</em>, 15–17 April.</li>
+        <li id="pub-multimeters-2011">Fenton, M. (2011). Using a digital multi-meter as an inexpensive data-logger substitute. <em>SCIOS</em>, Science Teachers Association of Western Australia.</li>
       </ol>
+      <p> More to be added soon...</p>
     </main>
   </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
