--- a/talks.html
+++ b/talks.html
@@ -84,9 +84,10 @@
     <main id="content" class="content" role="main" tabindex="-1" aria-label="Talks">
       <h2>Talks</h2>
       <ul>
-        <li id="talk-interruptible-media"><strong>Interruptible Media in the Classroom</strong> — EdTech Summit 2024<br /><span class="meta">Invited talk &middot; <a href="files/sample-deck.pptx" aria-label="Download talk slides as PowerPoint file">Slides (PPTX)</a></span></li>
-        <li id="talk-voice-first"><strong>Designing for Voice-First Learning</strong> — Learning Futures 2023<br /><span class="meta">Conference session</span></li>
+        <li id="talk-reclaiming-science"><strong>From Galileo to LIGO: Reclaiming the Maker Space for Science.</strong> — SciCon 2016<br /><span class="meta">Keynote  &middot; <a href="files/michael fenton keynote.pdf" aria-label="Download talk slides as PDF file">Slides (PDF)</a></span></li>
+        <li id="talk-enlightenment-and-education"><strong> Enlightenment and education: a journey through time and space.</strong> — Open Polytechnic Learning conference 2023<br /><span class="meta">Keynote </span></li>
       </ul>
+      <p> More to be added soon...</p>
     </main>
   </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
