--- a/teaching.html
+++ b/teaching.html
@@ -81,7 +81,6 @@
     </aside>
     <main id="content" class="content" role="main" tabindex="-1" aria-label="Teaching">
       <h2>Teaching</h2>
-      <p>Here are selected modules and course materials.</p>
       <h3>Course Design Principles</h3>
       <ul>
         <li>Constructivist alignment
@@ -93,12 +92,23 @@
         <li>Universal Design for Learning (UDL)</li>
         <li>Low-floor, high-ceiling tasks</li>
       </ul>
-      <h3>Sample Module</h3>
+      <h3>Combined STEM for old and young - TV and movie props</h3>
       <figure>
-        <img src="assets/img/profile.png" alt="Prototype UI for voice commands and interruptibility" />
-        <figcaption>Prototype UI for voice commands and interruptibility.</figcaption>
+        <img src="assets/img/b9.png" alt="Prototype B9 mobile robot and science lab. AI interactive voice control." width="400" height="400"/>
+        <figcaption>Prototype B9 mobile robot and science lab. AI voice recognition. Companion, mobile lab, and teaching tool.</figcaption>
       </figure>
+	<p><a href="files/B9test.wav" aria-label="Download Lost in Space B9 robot voice file">Download Lost in Space B9 robot voice file (WAV)</a></p>
       <blockquote><span lang="en">“Technology should disappear into the learning experience while making thinking visible.”</span></blockquote>
+      <p></p>
+      <h3>Teaching - Primary to Postgraduate</h3>
+          <ul>
+            <li>Level 7 Grad Dip.Tchg Science and Mathematics Education and Education Leadership.</li>
+            <li>Level 5 Dip.ICT and B.App.I.S degree level computer science courses.</li>
+            <li>Green School New Zealand - leader of science and mathematics programmes (Year 7 - 13).</li>
+            <li>Intermediate - Digital Technology - robotics and game design (Years 7 - 8).</li>
+	    <li>Secondary - Biology, Chemistry, Physics, Earth and Space, Mathematics, Calculus, Robotics & Game design (Years 9 - 13).</li>
+          </ul>
+      <p> More to be added soon...</p>
     </main>
   </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
