--- a/workshops.html
+++ b/workshops.html
@@ -82,9 +82,9 @@
     <main id="content" class="content" role="main" tabindex="-1" aria-label="Workshops">
       <h2>Workshops</h2>
       <ul>
-        <li><strong>ESP32 + Voice Recognition Bootcamp</strong> (2025)<br /><span class="meta">Workshop &middot; <a href="files/sample-deck.pptx" aria-label="Download workshop deck as PowerPoint file">Deck (PPTX)</a></span></li>
-        <li><strong>Accessible Course Design</strong> (2024)<br /><span class="meta">Faculty development</span></li>
+        <li><strong>Portfolio learning design and assessment design and moderation for learners working through numeracy unit standards.</strong> (2020)<br /><span class="meta">Workshop &middot; </span>Toi Ohomai Institute of Technology.</li>
       </ul>
+      <p> More to be added soon...</p>
     </main>
   </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
