--- a/cv.html
+++ b/cv.html
@@ -2,7 +2,6 @@
 <html lang="en" data-page="cv">
 <head>
   <title>CV — Michael Fenton</title>
-
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Academic portfolio and CV for Michael Fenton, showcasing innovative teaching, research, talks, workshops, and publications." />
@@ -89,13 +88,29 @@
       </ul>
       <h3>Professional Experience</h3>
       <ul class="tight">
-        <li><strong>Research / Consultant</strong>, 2014 - pressent:
+        <li><strong>Research</strong>:
           <ul>
-	    <li>Competence to undertake independent research practice.</li>
-            <li>Director - Focus Consultancy.</li>
+            <li>Competence to undertake independent research practice. <a href="https://www.royalsociety.org.nz/" target="_blank">Royal Society.</a></li>
+            <li>Director - <a href="http://Focus-consultancy.co.nz" target="_blank">Focus Consultancy</a>.</li>
+            <li>Founder / Director - <a href="files/michael-fenton-nexus-research-group.pdf" target="_blank">Nexus Research Group</a>.</li>
             <li>Industrial microbiology and chemistry - Tegel Foods.</li>
-            <li>Qualification development - including Secondary school alternatives to NCEA.</li>
-            <li>Workshop facilitator - expertise in assessment, moderation, curriculum design (NZQA  & graduate degree level).</li>
+            <li>Environmental microbiology and genetics - <a href="https://www.focus-consultancy.co.nz/publications.html" target="_blank">Rhizobium and Giardia</a>.</li>
+            <li>Qualification development - Vocational, postgraduate, and Secondary school alternatives to NCEA.</li>
+            <li>Leadership and innovation in STEM education - Keynote speaker, participation in high level forums.</li>
+            <li>Education research - raising student engagement and achievement using low-cost devices for authentic hands-on learning in science and mathematics.</li>
+          </ul>
+        </li>
+      </ul>
+      <p></p>
+      <ul class="tight">
+        <li><strong>Consultant</strong>:
+          <ul>
+            <li>Director - <a href="http://Focus-consultancy.co.nz" target="_blank">Focus Consultancy</a>.</li>
+            <li>Founder / Director - <a href="files/michael-fenton-nexus-research-group.pdf" target="_blank">Nexus Research Group</a>.</li>
+            <li>Qualification development - Vocational, postgraduate, and Secondary school alternatives to NCEA.</li>
+            <li>Technology advisor - <a href="files/michael-fenton-enviropower-report.pdf" target="_blank">Enviropower renewable energy project</a>.</li>
+            <li>Leadership and innovation in STEM education - Keynote speaker, participation in high level forums.</li>
+            <li>Workshop facilitator - STEM teacher professional development, and assessment, moderation, &amp; curriculum design (NZQA &amp; graduate degree level).</li>
           </ul>
         </li>
       </ul>
@@ -105,26 +120,50 @@
           <ul>
             <li>Resource writing, instructional design, assessment writing, programme design and delivery.</li>
             <li>Developed original hardware and software for STEAM teaching (Primary through to Secondary level)</li>
-            <li>Qualification development - including Secondary school alternatives to NCEA</li>
-            <li>Mentored and supervised in-service classroom teachers and principals to design, carry out and evaluate practice-led action research projects that have improved children’s’ learning outcomes in science and mathematics.</li>
+            <li>Qualification development - all levels, including Secondary school alternatives to NCEA</li>
+            <li>Teaching and assesment by distance, online, and at scale - Teacher Education
+		Refresh (TER) and Level 7 Grad.Dip. science and mathematics education and leadership.</li>
+            <li>Mentored and supervised in-service classroom teachers and principals to design, carry out and
+		evaluate practice-led action research projects that have improved
+		children’s’ learning outcomes in science and mathematics.</li>
+            <li>Science communication - school visits, public speaker.</li>
 	   <li>Research active - long list of education conference publications/presentations.</li>
+          </ul>
+        </li>
+	<li><strong>STEM subject expertise</strong>:
+          <ul>
+            <li><strong>Postgraduate</strong>: Level 7 Grad. Dip. Science and Mathematics Education and Education Leadership.</li>
+            <li><strong>Degree</strong>: B.App.I.S degree level computer science courses</li>
+            <li><strong>Undergraduate Diploma</strong>: Level 5 Dip. ICT level computer science courses.</li>
+            <li><strong>Polytechnic</strong>: STEM Foundation and Bridging courses.</li>
+            <li><strong>Green School New Zealand</strong>: - leader of cross-curricula science and mathematics programmes (Year 7 - 13).</li>
+	    <li><strong>Secondary school</strong>:
+Biology, Chemistry, Physics, Earth &amp; Space Science, Mathmematics,
+Calculus, Electronics, Robotics, Game Design (Year 9 - 13).</li>
+            <li><strong>Intermediate / Primary school</strong>: Digital Technology (Year 7 - 8).</li>
           </ul>
         </li>
       </ul>
       <h3>Instructional design</h3>
-      <ul class="tight">
-        <li><strong>Academic & vocational</strong>:
           <ul>
             <li>Familiar with various instructional design models such as ADDIE, Bloom, Gagne, and Merrill.</li>
             <li>Online course design and content creation in both Moodle and iQualify platforms.</li>
-            <li>Working with stake holders and subject matter experts to design NZQA Foundation level, sub-degree and degree level programmes and courses.</li>
+            <li>Working
+with stake holders and subject matter experts to design NZQA Foundation
+level, sub-degree and degree level programmes and courses.</li>
             <li>Use of generative AI and AI Assessment Scale.</li>
           </ul>
-        </li>
-      </ul>
-      <h3>Publications - selected</h3>
-      </ol>
-     <p>More to follow soon...</p>
+    <h3>Service and Leadership</h3>
+          <ul>
+            <li>Professional member of the Royal Society of New Zealand.</li>
+            <li>Established
+the Nexus Research Group, patron Dr Sir William Pickering, former head
+of JPL. New Zealand’s only school-based research laboratory</li>
+            <li>Taranaki Science and Technology Fair; organising committee</li>
+            <li>New Plymouth Little Theatre.</li>
+          </ul>
+      <h3>Publications - Presentations</h3>
+	<p><a href="publications.html" class="button" aria-label="See publications by Michael Fenton">See publications</a></p>
     </main>
   </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
