--- a/projects/rigel-games-electronics-link.html
+++ b/projects/rigel-games-electronics-link.html
@@ -32,14 +32,14 @@
     ]
   }</script>
   <!-- Favicons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <link rel="manifest" href="/site.webmanifest" />
-  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png" />
+  <link rel="manifest" href="../site.webmanifest" />
+  <link rel="shortcut icon" href="../favicon.ico" />
 
   
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
 <body>
   <a class="skip-link" href="#content">Skip to content</a>
@@ -54,12 +54,12 @@
     </button>
     <nav id="mainnav" class="mainnav" role="navigation" aria-label="Main menu">
       <ul>
-        <li><a href="teaching.html">Teaching</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="talks.html">Talks</a></li>
-        <li><a href="workshops.html">Workshops</a></li>
-        <li><a href="publications.html">Publications</a></li>
-        <li><a href="cv.html">CV</a></li>
+        <li><a href="../teaching.html">Teaching</a></li>
+        <li><a href="../projects.html">Projects</a></li>
+        <li><a href="../talks.html">Talks</a></li>
+        <li><a href="../workshops.html">Workshops</a></li>
+        <li><a href="../publications.html">Publications</a></li>
+        <li><a href="../cv.html">CV</a></li>
       </ul>
     </nav>
     <button id="themeToggle" class="theme-toggle" aria-pressed="false" aria-label="Activate dark mode" title="Switch to dark mode">
@@ -70,7 +70,7 @@
   <div class="layout">
     <aside class="sidebar" role="complementary" aria-label="Profile">
       <div class="profile-card">
-        <img src="assets/img/profile.png" alt="Portrait of Michael Fenton" class="profile-photo" width="120" height="120" />
+        <img src="../assets/img/profile.png" alt="Portrait of Michael Fenton" class="profile-photo" width="120" height="120" />
         <h1 class="name">Michael Fenton, MRSNZ</h1>
         <p class="title">Scientist, STEM Education lecturer, Education innovator, Consultant, Writer</p>
         <ul class="social" aria-label="Social and professional links">
@@ -171,11 +171,11 @@
           <li id="pub-voice-first-2025">Fenton, M., &amp; Doe, A. (2025). Voice-first interactions for embedded learning environments. <em>Journal of Learning Tech</em>, 42(1), 15–29. <a href="https://doi.org/10.1234/jlt.2025.001" aria-label="Read publication DOI">https://doi.org/10.1234/jlt.2025.001</a></li>
           <li id="pub-interruptible-2024">Doe, A., Smith, B., &amp; Fenton, M. (2024). Designing interruptible media for classroom devices. <em>Computers &amp; Education</em>, 210, 104859. <a href="https://doi.org/10.5678/cae.210.104859" aria-label="Read publication DOI">https://doi.org/10.5678/cae.210.104859</a></li>
         </ol>
-        <p><a href="publications.html" class="button" aria-label="See more publications by Michael Fenton">See more publications</a></p>
+        <p><a href="../publications.html" class="button" aria-label="See more publications by Michael Fenton">See more publications</a></p>
       </section>
     </main>
   </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
-  <script src="assets/js/main.js"></script>
+  <script src="../assets/js/main.js"></script>
 </body>
 </html>
