--- a/index.html
+++ b/index.html
@@ -162,15 +162,11 @@
           <p class="meta">Updated for B9 robot and RIGEL &middot; 2025</p>
           <blockquote><span lang="en">“Small, reliable tools can shift student focus from book rote learning to hands-on inquiry.”</span></blockquote>
           <p>Project-based learning to scaffold science, maths, and data literacy.</p>
-          <p><a href="files/michael fenton using digital multimeters.pdf" aria-label="Download conferance workshop as PDF file">Download using digital multimeters in science and maths workshop (PDF)</a></p>
+          <p><a href="files/michael-fenton-using-digital-multimeters.pdf" aria-label="Download conferance workshop as PDF file">Download using digital multimeters in science and maths workshop (PDF)</a></p>
         </article>
       </section>
       <section aria-labelledby="sample-publications-heading">
         <h3 id="sample-publications-heading">Sample Publications</h3>
-        <ol class="pub-list apa" aria-label="Sample publications">
-          <li id="pub-voice-first-2025">Fenton, M., &amp; Doe, A. (2025). Voice-first interactions for embedded learning environments. <em>Journal of Learning Tech</em>, 42(1), 15–29. <a href="https://doi.org/10.1234/jlt.2025.001" aria-label="Read publication DOI">https://doi.org/10.1234/jlt.2025.001</a></li>
-          <li id="pub-interruptible-2024">Doe, A., Smith, B., &amp; Fenton, M. (2024). Designing interruptible media for classroom devices. <em>Computers &amp; Education</em>, 210, 104859. <a href="https://doi.org/10.5678/cae.210.104859" aria-label="Read publication DOI">https://doi.org/10.5678/cae.210.104859</a></li>
-        </ol>
         <p><a href="publications.html" class="button" aria-label="See more publications by Michael Fenton">See more publications</a></p>
       </section>
     </main>
