--- a/projects.html
+++ b/projects.html
@@ -83,11 +83,10 @@
     <main id="content" class="content" role="main" tabindex="-1" aria-label="Research">
       <h2>Projects and Education Research</h2>
       <p>Current lines of inquiry and active studies.</p>
-      <ul>
-        <li>Voice-first interactions in embedded learning environments</li>
-        <li>Interruptible media and attention-aware interfaces</li>
-        <li>Low-cost data logging for inquiry-based STEM</li>
-      </ul>
+        <article class="card" aria-labelledby="project2-title">
+          <h4 id="project2-title">Digital Multimeters as Low Cost Dataloggers: Citizen Science and Authentic Cross-curricula Learning</h4>
+          <p><a href="projects/digital-multimeters-as-dataloggers.html" aria-label="Link to project details and resources">Link to project details and resources</a></p>
+        </article>
       <p> More to be added soon...</p>
     </main>
   </div>
