--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
     <nav id="mainnav" class="mainnav" role="navigation" aria-label="Main menu">
       <ul>
         <li><a href="teaching.html">Teaching</a></li>
-        <li><a href="research.html">Projects</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="talks.html">Talks</a></li>
         <li><a href="workshops.html">Workshops</a></li>
         <li><a href="publications.html">Publications</a></li>
