--- a/projects/digital-multimeters-as-dataloggers.html
+++ b/projects/digital-multimeters-as-dataloggers.html
@@ -140,8 +140,13 @@
 	<p>Michael has been a keynote speaker at education conferences, and won
 	a number of awards. His work has featured in newspaper articles and conference videos, and been covered on radio, TV, education magazines and 	education journals. Michael visited schools and volunteered for many years to assist organise and promote the Taranaki Science and Technology 	Fair.</p>
 
-<iframe width="400" height="390" src="http://www.youtube.com/embed/qccXDdQrPfI" frameborder="0" allowfullscreen></iframe>
-<p></p>
+<iframe width="300" height="390"
+        src="https://www.youtube.com/embed/qccXDdQrPfI?rel=0"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+</iframe>
 
 
 
