--- a/projects/digital-multimeters-as-dataloggers.html
+++ b/projects/digital-multimeters-as-dataloggers.html
@@ -139,27 +139,45 @@
 	<h3 id="presentations">YouTube videos</h3>
 	<p>Michael has been a keynote speaker at education conferences, and won
 	a number of awards. His work has featured in newspaper articles and conference videos, and been covered on radio, TV, education magazines and 	education journals. Michael visited schools and volunteered for many years to assist organise and promote the Taranaki Science and Technology 	Fair.</p>
-
-<iframe width="300" height="390"
+<iframe width="390" height="390"
         src="https://www.youtube.com/embed/qccXDdQrPfI?rel=0"
-        title="YouTube video player"
+        title="Digital multimeter heat sensor"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
-
-
-
-
-            <iframe title="Digital multimeter heat sensor" src="http://www.youtube.com/embed/qccXDdQrPfI?rel=0" allowfullscreen="" frameborder="0" height="390" width="400"></iframe>
 <p></p>
-<iframe title="Digital multimeter LED light sensor" src="http://www.youtube.com/embed/Lx7_HHxRH-s" allowfullscreen="" frameborder="0" height="390" width="400"></iframe>
+<iframe width="390" height="390"
+        src="https://www.youtube.com/embed/Lx7_HHxRH-s"
+        title="Digital multimeter LED light sensor"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+</iframe>
 <p></p>
-<iframe title="Digital multimeter angle sensor" src="http://www.youtube.com/embed/uRymEI3nO2g?rel=0" allowfullscreen="" frameborder="0" height="390" width="400"></iframe>
+<iframe width="390" height="390"
+        src="https://www.youtube.com/embed/uRymEI3nO2g?rel=0"
+        title="Digital multimeter angle sensor"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+</iframe>
 <p></p>
-<iframe title="Digital multimeter salt sensor" src="http://www.youtube.com/embed/kSPDjAhl1Qc?rel=0" allowfullscreen="" frameborder="0" height="390" width="400"></iframe>
+<iframe width="390" height="390"
+        src="https://www.youtube.com/embed/kSPDjAhl1Qc?rel=0"
+        title="Digital multimeter salt sensor"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+</iframe>
 <p></p>
-<iframe title="Digital multimeter cell phone sensor" src="http://www.youtube.com/embed/tEDIJp42vrQ?rel=0" allowfullscreen="" frameborder="0" height="390" width="400"></iframe>
+<iframe width="390" height="390"
+        src="https://www.youtube.com/embed/tEDIJp42vrQ?rel=0"
+        title="Digital multimeter cell phone sensor"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+</iframe>
     </main>
   </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
