--- a/projects/digital-multimeters-as-dataloggers.html
+++ b/projects/digital-multimeters-as-dataloggers.html
@@ -100,7 +100,7 @@
 	    <li>He promoted affordable, inquiry-driven cross-curricula learning sharing his research at conferences, through publications, and on his Nexus Research Group website.</li>
             <li>Michael's DMM digital multimeter datalogger technology is still being shared by other educators. Michael pioneered the general use of a low-cost, scalable solution to make experimental and hands-on authentic maths, science, and discovery learning accessible in resource-limited schools.</li>
           </ul>
-
+	</section>
 	<h3 id="build-it">Build it</h3>
 	<p>Under-confident teachers and students were found to be confused by the markings on the digital multimeters. Two strategies were employed that seemed to overcome this. Firstly, a plastic cover was cut and placed over the central dial to cover distracting labels on the meter. An erasable marker was used to label the dial setting as ‘heat’ or ‘light’ or ‘salt’, etc. This aided the second strategy which was to remind students each time that we treat the meter as a ‘what does it measure today?’ machine.</p>
 <p>For safety reasons, as well as the ability to quickly change sensors, an electrical terminal block was fitted to the DMM probes. The probes that come with the meters had pointed ends that could cause injury if used improperly. In the trial only single component sensors were used. Some components must be inserted ‘the right way around’, such as light emitting diodes (LED’s) and signal diodes. It was a simple matter to remind students that if the display does not give an appropriate reading, just insert the sensor the other way around. </p>
@@ -142,7 +142,6 @@
 <iframe width="390" height="390"
         src="https://www.youtube.com/embed/qccXDdQrPfI?rel=0"
         title="Digital multimeter heat sensor"
-        frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
@@ -150,7 +149,6 @@
 <iframe width="390" height="390"
         src="https://www.youtube.com/embed/Lx7_HHxRH-s"
         title="Digital multimeter LED light sensor"
-        frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
@@ -158,7 +156,6 @@
 <iframe width="390" height="390"
         src="https://www.youtube.com/embed/uRymEI3nO2g?rel=0"
         title="Digital multimeter angle sensor"
-        frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
@@ -166,7 +163,6 @@
 <iframe width="390" height="390"
         src="https://www.youtube.com/embed/kSPDjAhl1Qc?rel=0"
         title="Digital multimeter salt sensor"
-        frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
@@ -174,7 +170,6 @@
 <iframe width="390" height="390"
         src="https://www.youtube.com/embed/tEDIJp42vrQ?rel=0"
         title="Digital multimeter cell phone sensor"
-        frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
