--- a/projects/digital-multimeters-as-dataloggers.html
+++ b/projects/digital-multimeters-as-dataloggers.html
@@ -137,8 +137,7 @@
 	<blockquote><span lang="en"><a href="../files/michael-fenton-using-digital-multimeters.pdf" target="_blank">Download a workshop presentation [PDF]</a></span></blockquote>
 
 	<h3 id="presentations">YouTube videos</h3>
-	<p>Michael has been a keynote speaker at education conferences, and won
-	a number of awards. His work has featured in newspaper articles and conference videos, and been covered on radio, TV, education magazines and 	education journals. Michael visited schools and volunteered for many years to assist organise and promote the Taranaki Science and Technology 	Fair.</p>
+	<p>Michael has documented the simple assembly process and working principles in YouTube videos. He demonstrates the use of a terminal block to attach sensors to a digital multimeter. The markings around the dial are hidden using a plastic cover and the 'yellow boxes' become simply a heat sensor, or a light sensorr, depending on the label written in marker. This focuses students attenttion to the readings until they become expert users and understand the different settings.</p>
 <iframe width="390" height="390"
         src="https://www.youtube.com/embed/qccXDdQrPfI?rel=0"
         title="Digital multimeter heat sensor"
