--- a/projects/digital-multimeters-as-dataloggers.html
+++ b/projects/digital-multimeters-as-dataloggers.html
@@ -87,7 +87,7 @@
 	He knew that investigating how the world works requires seeing more than the eyes alone can reveal.
 	School science equipment is limited, with expensive data loggers and sensors reserved for senior classes 
 	and limited to specialist subject use. This means that junior general science classes 
-	are unlikely to access tools that could transform thier learning and view of the world.
+	are unlikely to access tools that could transform their learning and view of the world.
 	From the early 2000's Michael developed and trialed low-cost sensor systems for cross-curricular learning
 	in junior science and mathematics classes. Their use was extended to senior specialist subject areas
 	with great success.</p>
@@ -137,41 +137,43 @@
 	<blockquote><span lang="en"><a href="../files/michael-fenton-using-digital-multimeters.pdf" target="_blank">Download a workshop presentation [PDF]</a></span></blockquote>
 
 	<h3 id="presentations">YouTube videos</h3>
-	<p>Michael has documented the simple assembly process and working principles in YouTube videos. He demonstrates the use of a terminal block to attach sensors to a digital multimeter. The markings around the dial are hidden using a plastic cover and the 'yellow boxes' become simply a heat sensor, or a light sensorr, depending on the label written in marker. This focuses students attenttion to the readings until they become expert users and understand the different settings.</p>
-<iframe width="390" height="390"
+	<p>Michael has documented the simple assembly process and working principles in YouTube videos. He demonstrates the use of a terminal block to attach sensors to a digital multimeter. The markings around the dial are hidden using a plastic cover and the 'yellow boxes' become simply a heat sensor, or a light sensor, depending on the label written in marker. This focuses students attenttion to the readings until they become expert users and understand the different settings.</p>
+<iframe width="370" height="370"
         src="https://www.youtube.com/embed/qccXDdQrPfI?rel=0"
         title="Digital multimeter heat sensor"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
 <p></p>
-<iframe width="390" height="390"
+<iframe width="370" height="370"
         src="https://www.youtube.com/embed/Lx7_HHxRH-s"
         title="Digital multimeter LED light sensor"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
 <p></p>
-<iframe width="390" height="390"
+<iframe width="370" height="370"
         src="https://www.youtube.com/embed/uRymEI3nO2g?rel=0"
         title="Digital multimeter angle sensor"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
 <p></p>
-<iframe width="390" height="390"
+<iframe width="370" height="370"
         src="https://www.youtube.com/embed/kSPDjAhl1Qc?rel=0"
         title="Digital multimeter salt sensor"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
 <p></p>
-<iframe width="390" height="390"
+<iframe width="370" height="370"
         src="https://www.youtube.com/embed/tEDIJp42vrQ?rel=0"
         title="Digital multimeter cell phone sensor"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
+      <h3>Back to Projects/Research</h3>
+	<p><a href="../projects.html" class="button" aria-label="See projects and research by Michael Fenton">Back to Projects</a></p>
     </main>
   </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
