--- a/cv.html
+++ b/cv.html
@@ -153,6 +153,16 @@ with stake holders and subject matter experts to design NZQA Foundation
 level, sub-degree and degree level programmes and courses.</li>
             <li>Use of generative AI and AI Assessment Scale.</li>
           </ul>
+    <h3>Awards and Fellowships</h3>
+          <ul>
+            <li>New Zealand Ministry of Education E-Learning Fellow. <a href="https://www.beehive.govt.nz/release/innovative-teachers-explore-new-technology-horizons" target="_blank">Government press release.</a></li>
+            <li>Prime Minister’s Education Excellence award finalist, Excellence in Leading. <a href="https://www.youtube.com/watch?v=tnqhZBkrIP0" target="_blank">Video link.</a></li>
+            <li>DEANZ Excellence Award, Distance Education Association of New Zealand <a href="https://www.scoop.co.nz/stories/ED1405/S00015/open-polytechnic-lecturer-wins-e-learning-award.htm" target="_blank">(now called FLANZ)</a></li>
+            <li>Kiwibank New Zealander of the Year - Local Hero Medal, services to science education</li>
+            <li>Microsoft New Zealand Innovative Teacher Award <a href="files/michael-fenton-microsoft-rigel-slides.pdf" target="_blank">Conference RIGEL slides [PDF].</a></li>
+            <li>Merit Award for CSI/Forensics course design and delivery, Western Institute of Technology at Taranaki</li>
+            <li>New Zealand Microbiology Society Postgraduate Prize</li>
+          </ul>
     <h3>Service and Leadership</h3>
           <ul>
             <li>Professional member of the Royal Society of New Zealand.</li>
