--- a/cv.html
+++ b/cv.html
@@ -27,7 +27,7 @@
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
       "https://focus-consultancy.co.nz/",
-      "https://github.com/MikeFentonNZ"
+      "https://www.youtube.com/@nznrg/videos",
     ]
   }</script>
   <!-- Favicons -->
@@ -75,7 +75,7 @@
         <ul class="social" aria-label="Social and professional links">
           <li><a href="https://nz.linkedin.com/in/mikefentonnz" target="_blank" aria-label="LinkedIn profile of Michael Fenton, MRSNZ">LinkedIn</a></li>
           <li><a href="https://focus-consultancy.co.nz/" target="_blank" aria-label="Education Consultancy website for Michael Fenton">Consultancy Website</a></li>
-          <li><a href="#" aria-label="GitHub profile of Michael Fenton">GitHub</a></li>
+          <li><a href="https://www.youtube.com/@nznrg/videos" target="_blank" aria-label="Michael Fenton YouTube channel">YouTube channel</a></li>
         </ul>
       </div>
     </aside>
@@ -114,6 +114,13 @@
           </ul>
         </li>
       </ul>
+	<p>Video showcasing some of Michael's innovative teaching as it impacts on raising the quality of science education across New Zealand.</p>
+<iframe width="370" height="370"
+        src="https://www.youtube.com/embed/tnqhZBkrIP0"
+        title="Michael Fenton: Excellence in Leading Education - Prime Minister's Educaiton Excellence Awards"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+</iframe>
       <h3>Teaching</h3>
       <ul class="tight">
         <li><strong>Academic & vocational</strong>:
@@ -130,6 +137,7 @@
 	   <li>Research active - long list of education conference publications/presentations.</li>
           </ul>
         </li>
+	<br>
 	<li><strong>STEM subject expertise</strong>:
           <ul>
             <li><strong>Postgraduate</strong>: Level 7 Grad. Dip. Science and Mathematics Education and Education Leadership.</li>
