--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
       "https://focus-consultancy.co.nz/",
-      "https://github.com/MikeFentonNZ"
+      "https://www.youtube.com/@nznrg/videos"
     ]
   }</script>
   <!-- Favicons -->
@@ -76,7 +76,7 @@
         <ul class="social" aria-label="Social and professional links">
           <li><a href="https://nz.linkedin.com/in/mikefentonnz" target="_blank" aria-label="LinkedIn profile of Michael Fenton, MRSNZ">LinkedIn</a></li>
           <li><a href="https://focus-consultancy.co.nz/" target="_blank" aria-label="Education Consultancy website for Michael Fenton">Consultancy Website</a></li>
-          <li><a href="#" aria-label="GitHub profile of Michael Fenton">GitHub</a></li>
+          <li><a href="https://www.youtube.com/@nznrg/videos" target="_blank" aria-label="Michael Fenton YouTube channel">YouTube channel</a></li>
         </ul>
       </div>
     </aside>
@@ -149,20 +149,20 @@
         <article class="card" aria-labelledby="project1-title">
           <h4 id="project1-title">Voice-Driven Menu Systems for Robots - Low Floor, High Ceiling Learning in STEM</h4>
           <p class="meta">Prototype &middot; 2025</p>
-          <p>An inexpensive interactive voice controlled robot and mobile science lab. A B9 robot to engage learners in maths and science.</p>
+          <p>An interactive voice controlled robot and mobile science lab. A working B9 robot from the TV show "Lost in Space" to engage learners in maths and science. Students can make their own new friend!</p>
           <ul>
-            <li>Built with ESP32, Picaxe, DF2301Q and DY-SV5W modules</li>
+            <li>Uses ESP32, Picaxe, DF2301Q and DY-SV5W modules at 5 volts.</li>
             <li>Supports RIGEL and DMM sensors, broadcasts real-time data as web served graphs to laptops and smart phones.</li>
-            <li>Designed for classroom resilience, learner engagement and modification.</li>
+            <li>Designed for classroom resilience, learner engagement and modification. Speaks any language.</li>
           </ul>
-          <p><a href="files/protype.pdf" aria-label="Download Lost in Space B9 robot as PDF file">Download Lost in Space B9 robot (PDF)</a></p>
+          <p><a href="projects/b9-robot-mobile-laboratory.html" aria-label="Go to the B9 Robot project page.">Go to the B9 Robot project page.</a></p>
         </article>
         <article class="card" aria-labelledby="project2-title">
           <h4 id="project2-title">Digital Multimeters for Science and Maths - Low Cost Citizen Science and Authentic Maths Learning</h4>
           <p class="meta">Updated for B9 robot and RIGEL &middot; 2025</p>
           <blockquote><span lang="en">“Small, reliable tools can shift student focus from book rote learning to hands-on inquiry.”</span></blockquote>
           <p>Project-based learning to scaffold science, maths, and data literacy.</p>
-          <p><a href="files/michael-fenton-using-digital-multimeters.pdf" aria-label="Download conferance workshop as PDF file">Download using digital multimeters in science and maths workshop (PDF)</a></p>
+          <p><a href="files/michael-fenton-using-digital-multimeters.pdf "target="_blank" aria-label="Download conferance workshop as PDF file">Download using digital multimeters in science and maths workshop (PDF)</a></p>
         </article>
       </section>
       <section aria-labelledby="sample-publications-heading">
