--- a/projects/rigel-games-electronics-link.html
+++ b/projects/rigel-games-electronics-link.html
@@ -28,7 +28,7 @@
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
       "https://focus-consultancy.co.nz/",
-      "https://github.com/MikeFentonNZ"
+      "https://www.youtube.com/@nznrg/videos"
     ]
   }</script>
   <!-- Favicons -->
@@ -76,7 +76,7 @@
         <ul class="social" aria-label="Social and professional links">
           <li><a href="https://nz.linkedin.com/in/mikefentonnz" target="_blank" aria-label="LinkedIn profile of Michael Fenton, MRSNZ">LinkedIn</a></li>
           <li><a href="https://focus-consultancy.co.nz/" target="_blank" aria-label="Education Consultancy website for Michael Fenton">Consultancy Website</a></li>
-          <li><a href="#" aria-label="GitHub profile of Michael Fenton">GitHub</a></li>
+          <li><a href="https://www.youtube.com/@nznrg/videos" target="_blank" aria-label="Michael Fenton YouTube channel">YouTube channel</a></li>
         </ul>
       </div>
     </aside>
@@ -131,11 +131,18 @@
 	<h4 id="authentic-learning-at-school-and-home">Authentic cross-curricula learning at school and home</h4>
 	<p>In general the devices enabled students to sense more of the world around them. Students could sense things they could not see or touch themselves, and this raised their curiosity and interest. Collecting real data was exciting, and the data they collected had real-world consequences for them. Taking the multimeters out of the classroom permits learners to survey the school grounds, survey parks, and investigate their homes. Engaging with their own data, collected using equipment they built and understood, was shown to supported authentic learning, permit real-world problem solving, and enabled most students to reach the relational stage or higher on the SOLO taxonomy (Hattie and Brown, 2004). Students also used the f-word. They reported they had fun!</p>
 	<blockquote><span lang="en"><a href="../files/michael-fenton-angle-sensor-investigation.pdf" target="_blank">Download a student activity [PDF]</a></span></blockquote>
+
 	<h4 id="making-diy-home-made-sensors">Making low cost DIY home-made sensors</h4>
 	<p>Since the early 2000's Michael has developed a number of sensors; some are shown on his YouTube channel. Some sensors are very simple single component sensors costing a few cents. Other sensors are inexpensive but include a power source and a few more components. Apart from the straightforward voltage, current and resistance measurements, the multi-meters can also detect; visible light, infra-red light, ultra-violet light, ionising radiation such as alpha particles, temperature, angle, bend, salt, humidity, pressure, touch, paper thickness, mobile phone transmissions, static electric fields, and more.</p>
 
 	<blockquote><span lang="en"><a href="../files/michael-fenton-using-digital-multimeters.pdf" target="_blank">Download a workshop presentation [PDF]</a></span></blockquote>
-
+<p>In this video Michael imagines equitable access to authentic learning tools if his digital multimeter kit is added to a learners school stationery supply. Green School Educators Programme, Teaching for sustainability: wall-less teaching draft video</p>
+<iframe width="370" height="370"
+        src="https://www.youtube.com//embed/WK13ocHyJAk"
+        title="5 minute sales pitch - using digital multimeters for cross-curricula STEM learning at home."
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+</iframe>
 	<h3 id="presentations">YouTube videos</h3>
 	<p>Michael has documented the simple assembly process and working principles in YouTube videos. He demonstrates the use of a terminal block to attach sensors to a digital multimeter. The markings around the dial are hidden using a plastic cover and the 'yellow boxes' become simply a heat sensor, or a light sensor, depending on the label written in marker. This focuses students attenttion to the readings until they become expert users and understand the different settings.</p>
 <iframe width="370" height="370"
