--- a/talks.html
+++ b/talks.html
@@ -28,7 +28,7 @@
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
       "https://focus-consultancy.co.nz/",
-      "https://github.com/MikeFentonNZ"
+      "https://www.youtube.com/@nznrg/videos"
     ]
   }</script>
   <!-- Favicons -->
@@ -78,7 +78,7 @@
         <ul class="social" aria-label="Social and professional links">
           <li><a href="https://nz.linkedin.com/in/mikefentonnz" target="_blank" aria-label="LinkedIn profile of Michael Fenton, MRSNZ">LinkedIn</a></li>
           <li><a href="https://focus-consultancy.co.nz/" target="_blank" aria-label="Education Consultancy website for Michael Fenton">Consultancy Website</a></li>
-          <li><a href="#" aria-label="GitHub profile of Michael Fenton">GitHub</a></li>
+          <li><a href="https://www.youtube.com/@nznrg/videos" target="_blank" aria-label="Michael Fenton YouTube channel">YouTube channel</a></li>
         </ul>  
       </div>
     </aside>
